--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,6 +1,8 @@
 #-----------------------application-------------------------------------
 
 application.url=https://www.royalbrothers.com
+booking.city=TRIVANDRUM
+phone.number=9567477554
 
 
 #-----------------------capabilities------------------------------------
