--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -7,6 +7,7 @@ pickUp.date=10 Dec 2025
 pickUp.time=05:30 AM
 dropOff.date=11 Dec 2025
 dropOff.time=05:30 AM
+profile.username=Joe Varghese
 
 
 #-----------------------capabilities------------------------------------
