--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -4,9 +4,9 @@ application.url=https://www.royalbrothers.com
 booking.city=Trivandrum
 phone.number=9567477554
 pickUp.date=10 Mar 2025
-pickUp.time=05:30 PM
+pickUp.time=05:30 AM
 dropOff.date=11 Mar 2025
-dropOff.time=10:30 PM
+dropOff.time=05:30 AM
 profile.username=Joe Varghese
 
 
