--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -2,13 +2,13 @@
 
 application.url=https://www.royalbrothers.com
 booking.city=Trivandrum
-phone.number=9567477554
+phone.number=9947447169
 pickUp.date=10 Mar 2025
 pickUp.time=05:30 AM
 dropOff.date=11 Mar 2025
 dropOff.time=05:30 AM
 profile.username=Joe Varghese
-
+email.address=abc@gmail.com
 
 #-----------------------capabilities------------------------------------
 
