--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -2,6 +2,7 @@
 
 application.url=https://www.royalbrothers.com
 booking.city=Trivandrum
+booking.coupon=CASHBACK
 phone.number=9567477554
 pickUp.date=10 Mar 2025
 pickUp.time=05:30 AM
