--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -4,13 +4,16 @@ application.url=https://www.royalbrothers.com
 booking.city=Trivandrum
 booking.coupon=CASHBACK
 phone.number=9567477554
+phone.deletion.number=8589986767
 pickUp.date=10 Mar 2025
 pickUp.time=05:30 AM
 dropOff.date=11 Mar 2025
 dropOff.time=06:30 AM
 web.profile.username=Joe
 profile.username=Joe Varghese
-email.address=joevarghese53331@gmail.com
+profile.password=@Test12345
+email.address=joevarghese53@gmail.com
+email.updated.address=joevarghese53331@gmail.com
 
 #-----------------------capabilities------------------------------------
 
