--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -10,10 +10,10 @@ pickUp.time=05:30 AM
 dropOff.date=11 Mar 2025
 dropOff.time=06:30 AM
 web.profile.username=Joe
-profile.username=Joe Varghese
+profile.username=Saravan A D
 profile.password=@Test12345
-email.address=joevarghese53@gmail.com
-email.updated.address=joevarghese53331@gmail.com
+email.address=saravanad35@gmail.com
+email.updated.address=saravanademulator@gmail.com
 
 #-----------------------capabilities------------------------------------
 
